hero fix on mobile

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -216,7 +216,7 @@ video {
     min-width: 100%;
     transform: translateX(-50%);
     mix-blend-mode: multiply;
-    background-image: url(../img/guac_timelapse.gif);
+    background-image: url(../img/hero_video@2x.jpg);
     background-size: 110%;
     background-repeat: no-repeat;
 }
@@ -606,7 +606,7 @@ label.checkbox-inline {
     text-transform: none;
     display: inline-block;
     color: #363513;
-    font-size: 16px;
+    font-size: 24px;
     font-weight: 800;
     margin-right: 20px;
 }
